landing page edit 20190314

--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Mamak Den's Page"
+title                    : "Mamak Den Rendang Artisan"
 title_separator          : "-"
-name                     : "Your Name"
+name                     : "Mamak Den Rendang Artisan"
 email                    : mamakden2019@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Web site ini segala hal mengenai Mamak Den dan rendang
