--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ url                      : # the base hostname & protocol for your site e.g. "ht
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/images/logo2.jpg"# path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : "/images/logo2.jpg" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -151,21 +151,25 @@ footer:
     - label: "Bitbucket"
       icon: "fab fa-fw fa-bitbucket"
       # url:
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://www.instagram.com/restywijaya"
+    #- label: "Instagram"
+    #  label2: "@restywijaya"
+    #  icon: "fab fa-fw fa-instagram"
+    #  url: "https://www.instagram.com/restywijaya"
       
     - label: "Instagram"
+      label2: "@rendangmamakden"
       icon: "fab fa-fw fa-instagram"
       url: "https://www.instagram.com/rendangmamakden/"
       
     - label: "Email"
+      label2: "mamakden2019@gmail.com"
       icon: "fas fa-at"
       url: mailto:mamakden2019@gmail.com
       
     - label: "WhatsApp"
+      label2: "+6287888365201"
       icon: "fab fa-whatsapp"
-      url: https://wa.me/6285780380398
+      url: https://wa.me/6287888365201
       
     
 
